# crucible_utils

./: README.md  pyproject.toml
src/crucible_utils/: __init__.py  challenges.py
src/crucible_utils/api/: __init__.py  models.py  service.py
src/ctf_utils/api/: models.py  service.py
