[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "crucible_utils"
version = "0.0.1"
authors = [
    { name="Axel Mierczuk" },
]
description = "A small ctf util package."
dependencies = [
    "requests~=2.32.3",
    "pydantic~=2.8.2",
]

[tool.hatch.build.targets.wheel]
packages = ['src/crucible_utils']

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true